syntax = "proto3";

package server;

option go_package = "github.com/ashupednekar/litefunctions/ingestor/pkg/proto";

service FunctionService {
  rpc CreateFunction(CreateFunctionRequest) returns (CreateFunctionResponse);
  rpc Activate(ActivateRequest) returns (ActivateResponse);
  rpc GetStatus(StatusRequest) returns (StatusResponse);
}

message CreateFunctionRequest {
  string namespace = 1;
  string name = 2;
  string project = 3;
  string language = 4;
  string git_creds = 5;
}

message CreateFunctionResponse {
  bool created = 1;
}

message ActivateRequest {
  string namespace = 1;
  string name = 2;
}

message ActivateResponse {
  bool is_active = 1;
  string language = 2;
}

message StatusRequest {
  string namespace = 1;
  string name = 2;
}

message StatusResponse {
  bool is_active = 1;
}
